@@ -51,9 +51,9 @@ public class FillWaterskins implements Action {
                 area = insa.getRCArea();
             }
         }
-        if(routePoints!=null)
+        if(routePoints!=null && !routePoints.isEmpty())
         {
-            new RoutePointNavigator(routePoints.getLast()).run(NUtils.getGameUI());
+            new RoutePointNavigator(routePoints.get(routePoints.size()-1)).run(NUtils.getGameUI());
             area = nArea.getRCArea();
         }
         Gob target = null;
